test/Fail/Issue2788b.err
Issue2788b.agda:4,3-15: error: [GenericError]
Missing option --cubical
when checking that the type of the primitive function primGlue is _
